--- a/src/choose/first.html
+++ b/src/choose/first.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <a href="../menu/archive.html"><button class="btn left-btn">读取存档</button></a>
-    <a href="../Rebellion/Rebellion/MainGame.html"><button class="btn right-btn">重新开始</button></a>
+    <a href="../main/MainGame.html"><button class="btn right-btn">重新开始</button></a>
 </body>
 </html>
