--- a/src/menu/menu.html
+++ b/src/menu/menu.html
@@ -17,6 +17,7 @@
         <a href="#" class="box"><i class="iconfont icon-bag"></i><span>背包</span></a>
         <a href="#" onclick="openPopup()" class="box"><i class="iconfont icon-achievements"></i><span>成就</span></a>
         <a href="#" onclick="openPopup2()" class="box"><i class="iconfont icon-memory"></i><span>回忆</span></a>
+        <a href="../main/MainGame.html" class="box"><i class="iconfont icon-file"></i><span>重新开始</span></a>
         <a href="archive.html" class="box"><i class="iconfont icon-file"></i><span>存档</span></a>
         <a href="../aboutus/main.html" class="box"><i class="iconfont icon-aboutus"></i><span>关于我们</span></a>
         <a href="#" class="box"><i class="iconfont icon-exit"></i><span>退出</span></a>
