--- a/src/signin/login.html
+++ b/src/signin/login.html
@@ -6,7 +6,7 @@
     </title>
     <link rel="stylesheet" href="register.css">
     <script src="login.js" type="text/javascript"></script>
-
+    <script src="script.js" defer></script>
 
 </head>
 <body>
