--- a/src/signin/signin.html
+++ b/src/signin/signin.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>注册
     </title>
     <link rel="stylesheet" href="register.css">
     <script src="register.js" type="text/javascript"></script>
-
-
+    <script src="script.js" defer></script>
 </head>
 <body>
 <h1>去找回 丢失的记忆</h1>
@@ -38,6 +39,7 @@
 
 
     <button type="submit" onclick="registerUser()">注册</button>
+    
 </div>
 </body>
 </html>
