--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
   <title>游戏封面</title>
 </head>
 <body>
-  <div class="game-cover">
-    <h1>R e b e l l i a n</h1>
-    <h1>非 我 所 愿</h1>
-    <br>
-    <br>
-    <br>
-    <p>Are You Ready?</p>
-    <p>准备好开始你的冒险之旅了吗？</p>
-  </div>
+  <canvas id="canvas"> </canvas>
+    <div class="container">
+      <h1>R e b e l l i a n</h1>
+      <h1>    非 我 所 愿</h1>
+      <br>  
+      <p>Are You Ready?</p>
+      <p>准备好开始你的冒险之旅了吗？</p>
+    </div>    
     <div class="buttons">
       <a href="src/signin/login.html"><button class="play-button">注册/登录</button></a>
       <a href="src/aboutus/main.html"><button class="options-button">关于我们</button></a>
-  </div>
+   </div>
 </body>
 </html>
+<script type="text/javascript" src="script.js"></script>
 
 
