--- a/src/main/MainGame.html
+++ b/src/main/MainGame.html
@@ -33,9 +33,9 @@
                   </div>
             </div>
 
-            <p class="title" >
+            <!-- <p class="title" >
                 Rebellion
-            </p>
+            </p> -->
 
             <p class="content">
                 通过 <span>WASD</span> 或 <span>上下左右</span>操控角色进行移动
