--- a/src/menu/archive.html
+++ b/src/menu/archive.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="archive.css">
 </head>
 <nav>
-    <a href="menu.html">返回</a></nav>
+    <a href="../main/MainGame.html">返回</a></nav>
 <body>
     <div class="header">
     <h1>存档</h1>
